tests/NormalTests/paczka1/small_fuzzy/58217272.err
Error in line 3: v9e A843 38,4
Error in line 6: KVPNl9 A902 83,4
